themes/hugo-notepadium/assets/css/style.css
/* ... */
*::-webkit-scrollbar-track-piece {
    background: transparent
}

*::-webkit-scrollbar-track {
    background: transparent/* color of the tracking area */
}

*::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.175);
    /* color of the scroll thumb */
    background-clip: padding-box;
    border-radius: 6px;
    /* roundness of the scroll thumb */
    border: 2px solid transparent/* creates padding around scroll thumb */
}

*::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0, 0, 0, 0.35)
}

html {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, 'Microsoft YaHei', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Noto Color Emoji';
    font-size: 15px;
    font-weight: 400;
    line-height: 1.5;
}

body {
    display: block;
    color: var(--black);
    background-color: var(--doctorWhite);
    word-break: normal;
    word-wrap: break-word;
    hyphens: auto;
    -webkit-hyphens: auto;
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    padding-top: constant(safe-area-inset-top);
    padding-right: constant(safe-area-inset-right);
    padding-bottom: constant(safe-area-inset-bottom);
    padding-left: constant(safe-area-inset-left);
    padding-top: env(safe-area-inset-top);
    padding-right: env(safe-area-inset-right);
    padding-bottom: env(safe-area-inset-bottom);
    padding-left: env(safe-area-inset-left);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 600;
    line-height: 1.25;
}

h1 {
    font-size: 1.75em;
}

h2 {
    font-size: 1.5em;
}

h3 {
    font-size: 1.25em;
}

h4 {
    font-size: 1em;
}

h5 {
    font-size: .85em;
}

h6 {
    font-size: .7em;
}

blockquote,
q {
    quotes: none;
    margin: 0;
}

mark {
    background-color: rgba(12, 242, 143, .2);
}

mark {
    padding-left: .15em;
    padding-right: .15em;
    border-radius: 3px;
}

code,
tt,
kbd,
samp {
    font-family: Menlo, Consolas, Monaco, 'Courier New', 'Ubuntu Mono', monospace, serif;
    font-weight: 400;
    font-size: 85%;
}

pre {
    display: block;
    text-align: left;
    font-size: 80%;
    line-height: 1.5em;
    margin: 0;
    padding: 16px;
    border-radius: 3px;
    background-color: var(--codeWhite);
    -o-tab-size: 4;
    -moz-tab-size: 4;
    tab-size: 4;
    overflow: auto;
}

code,
kbd,
tt,
samp {
    color: var(--codeRed);
    padding: .2em .4em;
    margin: 0;
    font-size: 85%;
    background-color: var(--codeWhite);
    border-radius: 3px;
}

pre code,
pre kbd,
pre tt,
pre samp {
    display: inline;
    font-size: inherit;
    color: inherit;
    padding: 0;
    border-radius: 0;
    background-color: rgba(0, 0, 0, 0);
}

table {
    border-spacing: 0;
    border-collapse: collapse;
}

td,
th {
    padding: 0;
}

table thead {
    color: #1d2b4c;
}

table tr:nth-child(even) {
    background-color: #f3f6fa;
}

a {
    color: var(--fireEngine);
    text-decoration: none;
    -webkit-tap-highlight-color: transparent;
    -webkit-text-decoration-skip: objects;
    -moz-text-decoration-skip: objects;
    text-decoration-skip: objects;
}

a:hover {
    text-decoration: underline;
}

del {
    opacity: 0.5;
}

abbr,
acronym {
    cursor: help;
}

strong,
b {
    color: var(--black);
}

.image-container,
.image-container .link,
.image-container .caption {
    display: block;
}

.image-container {
    text-align: center;
}

.image-container .title {
    display: inline-block;
    opacity: .6;
    font-size: .875em;
    text-align: initial;
    min-height: 22px;
    padding: 10px 5px;
}

#header {
    padding-top: 16px;
    padding-bottom: 16px;
    min-height: 56px;
    margin-bottom: 32px;
    background-color: var(--fireEngine);
}

#content {
    display: block;
    margin: 0 auto;
    max-width: 744px;
}

#footer {
    font-size: .75em;
    margin-top: 48px;
    margin-bottom: 30px;
}

.header.wrap {
    overflow: hidden;
}

.header.wrap,
.nav.wrap {
    margin-top: -5px;
}

.header.wrap>*,
.nav.wrap>* {
    margin-top: 5px;
}

.header.left-side,
.header.right-side {
    display: inline-block;
    text-align: initial;
}

.header.left-side {
    float: left;
}

.header.right-side {
    float: right;
}

.site.home:hover {
    opacity: 0.5;
    text-decoration: none;
}

.site.logo {
    height: 42px;
    border-radius: 3px;
    vertical-align: middle;
    margin-right: 8px;
}

.site.name {
    color: var(--white);
}

.site.slogan {
    font-size: .875em;
    text-align: center;
}

.site.slogan .title {
    display: inline-block;
    text-align: initial;
    min-height: 22px;
}

.nav.item {
    display: inline-block;
    padding: 4px 6px;
}

.footer-wrap {
    display: block;
    text-align: center;
}

.date {
    font-size: .875em;
}

.langs {
    display: inline-block;
    list-style: none;
    font-size: .875em;
}

.lang {
    margin-left: 10px;
}

.note.list {
    margin: 0;
    padding: 0;
    list-style: none;
}

.note.list .item {
    width: 100%;
    margin-top: 16px;
    padding: 32px;
    background-color: #fff;
    box-shadow: inset -1px 0 0 0 rgba(224, 227, 231, .6), inset 0 -1px 0 0 #e0e4e7, inset 1px 0 0 0 rgba(224, 227, 231, .6);
}

.note.list .item:hover {
    box-shadow: 0 2px 6px 0 #e0e4e7, inset -1px 0 0 0 rgba(224, 227, 231, .3), inset 0 -1px 0 0 #e0e4e7, inset 1px 0 0 0 rgba(224, 227, 231, .2);
}

.nav.item {
    color: var(--white);
}

.nav.item:hover {
    text-decoration: underline;
}

.tag:hover,
.category:hover {
    opacity: .5;
    text-decoration: none;
}

.title {
    color: var(--nero);
}

.note {
    display: block;
    text-decoration: none;
}

.note:hover {
    text-decoration: none;
}

.note.title,
.site.name {
    font-size: 1.125em;
    font-weight: 600;
}

.mldr {
    opacity: .6;
}

.note.title,
.note.date,
.note.content,
.note.imgs,
.note.labels {
    margin: 5px 0;
}

.note.content {
    color: var(--black);
}
/* ... */

